deployments/kubernetes/istio/gateway.yaml
# Periksa Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: portfolio-gateway
  namespace: portfolio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "portfolio.glanze.site"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "portfolio.glanze.site"
      tls:
        mode: SIMPLE
        credentialName: portfolio-tls-cert
