deployments/kubernetes/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: portfolio
spec:
  hosts:
    - "portfolio.glanze.site"
  gateways:
    - portfolio-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: portfolio
            port:
              number: 80
      retries:
        attempts: 3
        perTryTimeout: 2s
      timeout: 5s
      corsPolicy:
        allowOrigins:
          - exact: "https://portfolio.glanze.site"
        allowMethods:
          - GET
          - POST
          - OPTIONS
        allowHeaders:
          - content-type
        maxAge: "24h"
